--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Resume</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <main>
         <div class="resume">
             <div class="photo">
-                <img src="/images/RgfKr9adQoE.jpg" alt="My photo">
+                <img src="./images/RgfKr9adQoE.jpg" alt="My photo">
             </div>
             <div class="content">
                 <div class="about-me">
